5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1747_1534.log
== TEST (2019-05-16 11:06:15) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1
i = 0
fim = k-1
while(x < fim):
	soma = soma + v + ((v**2*i+1)/2**i+1
	i = i + 1
print(round(soma, 7))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:06:29) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1
i = 0
fim = k-1
while(x < fim):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:06:38) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1
i = 0
fim = k-1
while(x < fim):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:01) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1
i = 0
while(x>i):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:08) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1
i = 0
while(x>i):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:33) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x>i):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:44) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x>i):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:07:49) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x>i):
	soma = soma + v + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:05) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x>i):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:10) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x>i):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:08:16) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x>i):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:09:56) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(-1 < x and x < 1 and k > 0):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:10:27) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(-1 < x and x < 1 and k > 0):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
	k = k+1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:03) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x > -1 and x < 1 and k > 0):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
	k = k+1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:10) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 0
i = 0
while(x > -1 and x < 1 and k > 0):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
	k = k+1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:32) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1 
i = 0
while(x > -1 and x < 1 and k > 0):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
	k = k+1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:38) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1 
i = 0
while(x > -1 and x < 1 and k > 0):
	soma = soma + i + ((v**2*i+1)/(2**i+1))
	i = i + 1
	k = k+1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:11:52) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = 1 
i = 0
while(x > -1 and x < 1 and k > 0):
	soma = soma + v+ ((v**2*i+1)/(2**i+1))
	i = i + 1
	k = k+1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:18) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0.5
v = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:31) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0.5
v = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**2*i+1)/(2**i+1))
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.0
1.3333333
1.5333333
1.6444444
1.703268
1.733571
1.7489556
1.7567076
1.7605986
1.7625479
1.7635235
1.7640116
1.7642557
1.7643777
1.7644387
1.7644693
1.7644845
1.7644922
1.764496
1.7644979
1.7644988
1.7644993
1.7644995
1.7644997
1.7644997
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
1.7644998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:55) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**2*i+1)/(2**i+1))
	i = i + 1
	print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**2*i+1)/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:11) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**2*i+1)/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:08) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
k = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**2*i+1)/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:15) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
k = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**2*i+1)/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:19) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
k = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**2*i+1)/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:51) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**2*i+1)/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:17:40) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x(**2*i+1)/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
File "XXXX", line 7
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:17:55) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x(**2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x(**2*i+1))/(2**i+1))
TypeError: float object argument after ** must be a mapping, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:11) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + x + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + x + ((x**(2*i+1))/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:34) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + ((x**(2*i+1))/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:01) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = soma + ((x**(2*i+1))/(2**i+1))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:12) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:21:50) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:21:56) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:19) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	v = 0 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:26) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	v = 0 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:37) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = 0
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	v = 0 
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
0.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:33) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = 0 
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:39) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = 0 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:43) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = 0 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:58) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = 1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:00) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = 1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
1.1249897
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:09) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = 1
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.1249897
2.3249897
3.4361008
4.4949243
5.5252273
6.540612
7.5483639
8.5522549
9.5542043
10.5551799
11.5556679
12.555912
13.556034
14.5560951
15.5561256
16.5561409
17.5561485
18.5561523
19.5561542
20.5561552
21.5561556
22.5561559
23.556156
24.5561561
25.5561561
26.5561561
27.5561561
28.5561561
29.5561561
30.5561561
31.5561561
32.5561561
33.5561561
34.5561561
35.5561561
36.5561561
37.5561561
38.5561561
39.5561561
40.5561561
41.5561561
42.5561561
43.5561561
44.5561561
45.5561561
46.5561561
47.5561561
48.5561561
49.5561561
50.5561561
51.5561561
52.5561561
53.5561561
54.5561561
55.5561561
56.5561561
57.5561561
58.5561561
59.5561561
60.5561561
61.5561561
62.5561561
63.5561561
64.5561561
65.5561561
66.5561561
67.5561561
68.5561561
69.5561561
70.5561561
71.5561561
72.5561561
73.5561561
74.5561561
75.5561561
76.5561561
77.5561561
78.5561561
79.5561561
80.5561561
81.5561561
82.5561561
83.5561561
84.5561561
85.5561561
86.5561561
87.5561561
88.5561561
89.5561561
90.5561561
91.5561561
92.5561561
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:43) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
	print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:47) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:33) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:41) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
	print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:49) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
	print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:55) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
	print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:00) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:23) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v + ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:48) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v * ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:54) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v * ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:01) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v * ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:30:03) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- EXECUTION TIME:
0.216843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1747/1534/main.py", line 7, in <module>
    soma = soma + v * ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:04) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v * ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:08) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while((x > -1) and (x < 1) and (k > 0)):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + v * ((v**(2*i+1))/(2**i+1))
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:06) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
13.7652761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:11) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
13.7652761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:22) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:29) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:52) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = v + 1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
121.1737969
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:02) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	v = x + 1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
13.7652761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:25) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + x * ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:30) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + x * ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:46) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
x = x
i = 0
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:50) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
x = x
i = 0
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:08) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
	x = x + 1
print(round(soma, 7))
-- OUTPUT:
121.1737969
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:23) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:28) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7045871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:35) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 1
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.3085371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:40) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 1
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.3085371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:43) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 1
while(i < k):
	soma = soma + x * ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.3085371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:32) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
121.1737969
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:41) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
9.3250674
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:47) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 1
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
9.3250674
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:35:00) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- EXECUTION TIME:
0.181857
-- TEST CASE 1:
---- input:
0.89
3
---- correct output:
1.2366709
---- user output:
122.0637969
-- TEST CASE 2:
---- input:
0.25
6
---- correct output:
0.2554128
---- user output:
13400609.8950465
-- TEST CASE 3:
---- input:
0.2635
4
---- correct output:
0.2698651
---- user output:
1457.6844454
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:01) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = x
i = 0
while(i < k):
	soma = soma + v * ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
122.0637969
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:17) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
v = x
i = 0
while(i < k):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
49.575301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:31) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
48.685301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:38) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	i = i + 1
	v = v+1
print(round(soma, 7))
-- OUTPUT:
48.685301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:47) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
3.4616709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:52) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
3.4616709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:23) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.6816709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:28) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.6816709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:32) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.6816709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:59) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	x = x +1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
43.905301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:05) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	x = x +1
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
43.905301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:31) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	x = x + 1
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.335
3.585423
43.905301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:37) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	x = x + 1
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.335
3.585423
43.905301
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:43) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.335
1.5699897
1.6816709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:48) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = x
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.335
1.5699897
1.6816709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:25) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + v + ((v**(2*i+1))/(2**i+1))
	i = i + 1
	print(round(soma, 7))
-- OUTPUT:
1.335
2.4599897
3.4616709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:33) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
v = x
i = 0
while(i < k):
	soma = soma + ((v**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:58) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:03) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:18) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) * 2
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.5833417
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:24) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) * 2
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.5833417
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:33) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) * 2
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.5833417
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:41) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 1
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.3466709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:48) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 1
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.3466709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:56) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 1
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.3466709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:06) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:13) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:43) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 1
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:52) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 1
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:57) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 1
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:42:05) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 1
i = 1
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) 
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.3466709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:42:19) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 1
i = 1
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))  2
	i = i + 1
print(round(soma, 7))
-- ERROR:
File "XXXX", line 6
    soma = soma + ((x**(2*i+1))/(2**i+1))  2
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:42:26) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 1
i = 1
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1)) / 2
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.1733354
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:09) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:18) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:24) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
0.7916709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:43:41) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2**i+1))
	i = i + 1
print(round(soma, 7))
-- EXECUTION TIME:
0.152456
-- TEST CASE 1:
---- input:
0.89
3
---- correct output:
1.2366709
---- user output:
0.7916709
-- TEST CASE 2:
---- input:
0.25
6
---- correct output:
0.2554128
---- user output:
0.1304107
-- TEST CASE 3:
---- input:
0.2635
4
---- correct output:
0.2698651
---- user output:
0.1381123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:09) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2*i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.2366709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:13) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2*i+1))
	i = i + 1
print(round(soma, 7))
-- OUTPUT:
1.2366709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:44:22) 
-- CODE:
x = float(input("x: "))
k = int(input("k: "))
soma = 0
i = 0
while(i < k):
	soma = soma + ((x**(2*i+1))/(2*i+1))
	i = i + 1
print(round(soma, 7))
-- EXECUTION TIME:
0.188817
-- TEST CASE 1:
---- input:
0.89
3
---- correct output:
1.2366709
---- user output:
1.2366709
-- TEST CASE 2:
---- input:
0.25
6
---- correct output:
0.2554128
---- user output:
0.2554128
-- TEST CASE 3:
---- input:
0.2635
4
---- correct output:
0.2698651
---- user output:
0.2698651
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
